policies/opa/constraints/require-tenant-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireTenantLabels
metadata:
  name: require-tenant-labels
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - gatekeeper-system
      - cert-manager
      - ingress-nginx
      - monitoring
      - logging
      - argocd
      - default
  parameters:
    requiredLabels:
      - platform.idp/tenant
      - platform.idp/tier
